@@ -1,3 +1,8 @@
+2010-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr.py, base.py: Added support for user name and group name
+	  in url.
+
 2010-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoliststore.py (RecentQueue.pop): Delete old cache files.
